completed initial implementation

--- a/Project.toml
+++ b/Project.toml
@@ -7,4 +7,5 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+Macro = "260b7737-bf0e-4e84-9335-3af14438b1f5"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
