--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,18 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [compat]
+Aqua = "0.8.11"
 ClusterManagers = "2.0.0"
 Distributed = "1.10, 1.11"
 DistributedArrays = "0.6.7"
 julia = "1"
 JuMP = "1.25.0"
 Pkg = "1.10 - 1"
+Test = "1.10 - 1"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Test"]
