--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,37 +1,23 @@
-name: Documentation
+name: Documenter
 
 on:
-  push:
-    branches:
-      - master # update to match your development branch (master, main, dev, trunk, ...)
-    tags: '*'
   pull_request:
+  push:
+    branches: [main, develop]
+    tags: ['*']
 
 jobs:
-  build:
-    # These permissions are needed to:
-    # - Deploy the documentation: https://documenter.juliadocs.org/stable/man/hosting/#Permissions
-    # - Delete old caches: https://github.com/julia-actions/cache#usage
+  Documenter:
     permissions:
-      actions: write
       contents: write
-      pull-requests: read
-      statuses: write
+    name: Documentation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
-        with:
-          version: '1'
       - uses: julia-actions/cache@v2
-      - name: Install dependencies
-        shell: julia --color=yes --project=docs {0}
-        run: |
-          using Pkg
-          Pkg.develop(PackageSpec(path=pwd()))
-          Pkg.instantiate()
-      - name: Build and deploy
-        run: julia --color=yes --project=docs docs/make.jl
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-docdeploy@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
