--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Filippo Pecci <peccifilippo@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 DistributedArrays = "aaf54ef3-cdf8-58ed-94cc-d582ad619b94"
@@ -13,15 +12,14 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [compat]
-Aqua = "0.8.11"
-ClusterManagers = "2.0.0"
-Dates = "1.10, 1.11"
-Distributed = "1.10, 1.11"
-DistributedArrays = "0.6.7"
-JuMP = "1.25.0"
-Logging = "1.10, 1.11"
-Pkg = "1.10 - 1"
-Test = "1.10 - 1"
+Aqua = "^0.8.11"
+Dates = "1"
+Distributed = "1"
+DistributedArrays = "^0.6.7"
+JuMP = "^1.25.0"
+Logging = "1"
+Pkg = "1"
+Test = "1"
 julia = "1"
 
 [extras]
