Update compatibility versions in Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -12,11 +12,11 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 
 [compat]
-Aqua = "^0.8.11"
+Aqua = "0.8"
 Dates = "1"
 Distributed = "1"
-DistributedArrays = "^0.6.7"
-JuMP = "^1.25.0"
+DistributedArrays = "0.6"
+JuMP = "1"
 Logging = "1"
 Pkg = "1"
 Test = "1"
